--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
         <div class="my-footer-inner-right-icons">
 
           <span class="my-footer-inner-right-icons-item">
-            <a class="my-footer-inner-right-icons-item-link" href="#">  <svg class="fab fa-facebook-square"> </svg></a>
+            <a class="my-footer-inner-right-icons-item-link" href="#"> <span class="sr-only">Facebook</span>  <svg class="fab fa-facebook-square"> </svg></a>
           </span>
 
           <span class="my-footer-inner-right-icons-item">
-            <a class="my-footer-inner-right-icons-item-link" href="#">  <i class="fab fa-twitter"> </i> </a>
+            <a class="my-footer-inner-right-icons-item-link" href="#"><span class="sr-only">Twitter</span>  <i class="fab fa-twitter"> </i> </a>
           </span>
 
           <span class="my-footer-inner-right-icons-item">
-            <a class="my-footer-inner-right-icons-item-link" href="#">  <i class="fab fa-instagram"> </i> </a>
+            <a class="my-footer-inner-right-icons-item-link" href="#"> <span class="sr-only">Instagram</span>  <i class="fab fa-instagram"> </i> </a>
           </span>
         </div>
         <div class="my-footer-inner-right-copy">&copy; Copyright 2018 Huddle. All rights reserved.</div>
