--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700|Poppins:300,400,600,600i&display=swap"
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700%7CPoppins:300,400,600,600i&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="public/styles.css">
 
