--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
 
     <!-- pre-header -->
-    <section class="pre-header">
+    <div class="pre-header">
       <div class="pre-header-left">
         <div class="pre-header-left-top-logo">
         </div>
@@ -36,10 +36,10 @@
           <a href="#" class="pre-header-right-try-container-try-it-link">Try It Free</a>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- main-header -->
-    <section class="main-header">
+    <div class="main-header">
 
       <div class="main-header-description-container">
         <div class="main-header-description-container-title">
@@ -58,12 +58,12 @@
       </div>
 
 
-    </section>
+    </div>
   </header>
   <!-- =====================================/HEADER=====================================================-->
 
   <!-- ====================================FEATURES======================================================-->
-  <section class="features">
+  <div class="features">
 
     <div class="features-one">
       <div class="features-one-text">
@@ -100,18 +100,18 @@
     </div>
 
 
-  </section>
+  </div>
   <!-- ====================================/FEATURES======================================================-->
 
   <!-- ====================================Call to Action======================================================-->
-  <section class="cta">
+  <div class="cta">
     <div class="cta-inner">
       <div class="cta-inner-call">Ready To Build Your Community?</div>
       <div class="cta-inner-get-started">
         <a href="#" class="cta-inner-get-started-link">Get Started For Free</a>
       </div>
     </div>
-  </section>
+  </div>
   <!-- ====================================/Call to Action======================================================-->
 
 
