--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700%7CPoppins:300,400,600,600i&display=swap"
@@ -120,7 +119,7 @@
 
     <div class="my-footer-logo"></div>
 
-    <section class="my-footer-inner">
+    <div class="my-footer-inner">
       <div class="my-footer-inner-left">
         <ul class="my-footer-inner-left-list">
           <li class="my-footer-inner-left-list-location"> <a class="my-footer-inner-left-list-location-link"
@@ -175,7 +174,7 @@
         </div>
         <div class="my-footer-inner-right-copy">&copy; Copyright 2018 Huddle. All rights reserved.</div>
       </div>
-    </section>
+    </div>
 
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor. </a>
