--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+ <!-- <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">-->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700%7CPoppins:300,400,600,600i&display=swap"
     rel="stylesheet">
